[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Roadmap/2 menu.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
start = "res://Scenes/Intro.tscn"
howtoplay = "res://Scenes/HowToPlay.tscn"
options = "res://Scenes/OptionsMenu.tscn"
credits = "res://Scenes/Credits.tscn"
ending = "res://Scenes/Ending.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )
centered = false

[node name="Start" type="Button" parent="CanvasLayer/Sprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -302.041
margin_top = 133.061
margin_right = -290.041
margin_bottom = 153.061
rect_scale = Vector2( 48.04, 6.76 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="Button" parent="CanvasLayer/Sprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -302.041
margin_top = 311.02
margin_right = -290.041
margin_bottom = 331.02
rect_scale = Vector2( 48.04, 6.76 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="CanvasLayer/Sprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 481.704
margin_right = -308.0
margin_bottom = 501.704
rect_scale = Vector2( 48.04, 6.76 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="CanvasLayer/Sprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 642.245
margin_right = -308.0
margin_bottom = 662.245
rect_scale = Vector2( 48.04, 6.76 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CanvasLayer/Sprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 802.49
margin_right = -308.0
margin_bottom = 822.49
rect_scale = Vector2( 48.04, 6.76 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Sprite/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/Sprite/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="CanvasLayer/Sprite/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/Sprite/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/Sprite/Quit" to="." method="_on_Quit_pressed"]
